# DISORF

./: .gitignore  .gitmodules  README.md  metric_results.py  pyproject.toml
config/camera/: REPLICA_config.json  REPLICA_config_undistorted.json  TUM_config_desk.json  TUM_config_office.json  Tank_config.json  zed_2i_config.json
config/trajectory/: barn.json  office2.json  office3.json  room0.json  room1.json  room2.json
scripts/: demo.sh  splatfacto.sh  useful_command.sh
scripts/replica_slam/: nerfacto_eval.sh  per_scene_eval.sh  splatfacto_eval.sh  splatfacto_eval_online.sh  splatfacto_eval_online_mvs.sh  splatfacto_logging.sh
scripts/tnt/: per_scene_eval.sh  per_scene_eval_mvs.sh  splatfacto_eval.sh  splatfacto_eval_online.sh  splatfacto_eval_online_mvs.sh  splatfacto_logging.sh
server_end/: packet_subscriber.py  packet_to_ros.py  ros_train.py
server_end/mvs/: recon.py
server_end/nsros/: method_configs.py  ros_dataloader.py  ros_datamanager.py  ros_dataparser.py  ros_dataset.py  ros_nerfacto.py  ros_nerfacto_field.py  ros_pipeline.py  ros_splatfacto.py  ros_splatfacto_gs0111.py  ros_trainer.py  ros_utils.py
